- Fixed a bug in open office document generator with regards to how paths are created for the html documents.
- Fixed bug with sso and cms and working if iguserid-cookie contained an equal-sign.
- Added sectioning of menu in management tool so it's easier to overview.
- Fixed asset binding functionality in AssignPropertyBindingTag

-------------------------------------------------------------------------------------
- InfoGlue 2.9.2 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
Version 2.9.2 is a bugfix and improvment release. As 2.9.0 contained so much
new functionality a few bugs were to be expected and most of them are now found and fixed.
We strongly recommend an upgrade to this version.
    
Thanx for all reports and proposals for bugfixes.
The InfoGlue Team


Abbreviated Changelog from 2.9.0 Final 
---------------------------------------
- Fixed bugs in common:mail-tag. Now it's ok to leave empty strings on cc, bcc and recipients.
- Fixed so file upload in imports actually end up in /uploads-dir and not in digitalAssets-dir.
- Localized inline dialog and made it possible to include extraData-parameter disableCloseLink and not have the default close-link in the end-view.
- Added possibility to state target on Linkbean - which is used in inline operations messages.
- Made personal settings changes in cms transfer to deliver. Also implemented so the deliver-dialogs all depends on the personal preferences in the cms. So if the user selects english as wanted tool-language all labels in delivers edit on sight etc is in english no matter what the site language is.
- Improved inline publish wizard to include a link to the live version of the published page. Very convinient for the users. 
- Added new footer buttons for mysettings and publish wizard.
- Added create subpage, edit page meta info and my setting to the edit on sight menu.